tests/error/tested.default
build:
run: LLVM_PROFILE_FILE="profile/tests/%%p.profraw" ./build/$BUILD/bin/rodac % --messages=minimal
cleanup: 

buildtime: < 1s
time: < 1s
exit: != 0
stderr: !=
